--- a/themes/main/layouts/partials/header.html
+++ b/themes/main/layouts/partials/header.html
@@ -5,16 +5,16 @@
       <a href="/"><img class="icon" src="./images/logos/BitcoinChatt_horizontal-dark-backgrounds.png" alt="Bitcoin chatt" class="logo"></a>
     </td>
     <td>
-      <h3 class="header-element"><a href="/coming_soon">About</a></h3>
+      <h3 class="header-element"><a href="./coming_soon">About</a></h3>
     </td>
     <td>
-      <h3 class="header-element"><a href="/coming_soon">Join</a></h3>
+      <h3 class="header-element"><a href="./coming_soon">Join</a></h3>
     </td>
     <td>
-      <h3 class="header-element"><a href="/coming_soon">Contact</a></h3>
+      <h3 class="header-element"><a href="./coming_soon">Contact</a></h3>
     </td>
     <td>
-      <h3 class="header-element"><a href="/coming_soon">Donate</a></h3>
+      <h3 class="header-element"><a href="./coming_soon">Donate</a></h3>
     </td>
   </tr>
 </table>
