--- a/public/css/main.css
+++ b/public/css/main.css
@@ -52,7 +52,7 @@ footer {
 
 .nav-box {
   /*background-color: rgb(0, 0, 24);*/
-  border: 1px solid #343439;
+  /*border: 1px solid #343439;*/
   margin: 1rem;
 }
 
