--- a/themes/main/layouts/partials/header.html
+++ b/themes/main/layouts/partials/header.html
@@ -1,5 +1,5 @@
 
-<table>
+<table class="header">
   <tr>
     <td>
       <a href="/"><img class="icon" src="/images/logos/BitcoinChatt_horizontal-dark-backgrounds.png" alt="Bitcoin chatt" class="logo"></a>
