--- a/themes/main/layouts/partials/head.html
+++ b/themes/main/layouts/partials/head.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <title>{{ if .IsHome }}{{ site.Title }}{{ else }}{{ printf "%s | %s" .Title site.Title }}{{ end }}</title>
-<link rel="icon" href="/images/logos/Bitcoin Chatt Avatar.png">
+<link rel="icon" href="/images/Logos/Bitcoin Chatt Avatar.png">
 {{ partialCached "head/css.html" . }}
 {{ partialCached "head/js.html" . }}
