--- a/themes/main/layouts/partials/header.html
+++ b/themes/main/layouts/partials/header.html
@@ -5,19 +5,19 @@
       <a href="/"><img class="icon" src="/images/Logos/BitcoinChatt_horizontal-dark-backgrounds.png" alt="Bitcoin chatt" class="logo"></a>
     </td>
     <td>
-      <h3 class="header-element"><a href="/coming_soon">About</a></h3>
+      <h3 class="header-element"><a href="/about">About</a></h3>
     </td>
     <td>
-      <h3 class="header-element"><a href="/coming_soon">Blog</a></h3>
+      <h3 class="header-element"><a href="/blog">Blog</a></h3>
     </td>
     <td>
-      <h3 class="header-element"><a href="/coming_soon">Join</a></h3>
+      <h3 class="header-element"><a href="/join">Join</a></h3>
     </td>
     <td>
-      <h3 class="header-element"><a href="/coming_soon">Contact</a></h3>
+      <h3 class="header-element"><a href="/contact">Contact</a></h3>
     </td>
     <td>
-      <h3 class="header-element"><a href="/coming_soon">Donate</a></h3>
+      <h3 class="header-element"><a href="/donate">Donate</a></h3>
     </td>
   </tr>
 </table>
