fix background image path

--- a/themes/main/assets/css/blogpost.css
+++ b/themes/main/assets/css/blogpost.css
@@ -4,5 +4,5 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-blend-mode: multiply;
-  background-image: url("/images/logos/Bitcoin Chatt Avatar 2.0.png");
+  background-image: url("/images/Logos/Bitcoin Chatt Avatar 2.0.png");
 }
