update icon folder

--- a/themes/main/layouts/_default/baseof.html
+++ b/themes/main/layouts/_default/baseof.html
@@ -4,6 +4,7 @@
   {{ partial "head.html" . }}
 </head>
 <body>
+  <h1>"{{ page.Path }}"</h1>
   <header>
     {{ partial "header.html" . }}
   </header>
