--- a/themes/main/assets/css/main.css
+++ b/themes/main/assets/css/main.css
@@ -20,8 +20,8 @@ header {
 }
 
 footer {
-  border-top: 1px solid #222;
-  margin-top: 1rem;
+  /*border-top: 1px solid #222;
+  margin-top: 1rem;*/
 }
 
 h1 {
