--- a/themes/main/layouts/_default/list.html
+++ b/themes/main/layouts/_default/list.html
@@ -1,5 +1,8 @@
 {{ define "main" }}
-  <h1>{{ .Title }}</h1>
+  {{- if .Params.underConstruction }}
+    <h1>{{ .Title }}</h1>
+  {{- end }}
+
   {{ .Content }}
   {{ range .Pages }}
     <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
