--- a/themes/main/layouts/_default/list.html
+++ b/themes/main/layouts/_default/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  {{- if .Params.underConstruction }}
+  {{- if not .Params.underConstruction }}
     <h1>{{ .Title }}</h1>
   {{- end }}
 
