--- a/themes/main/layouts/partials/head/css.html
+++ b/themes/main/layouts/partials/head/css.html
@@ -9,5 +9,5 @@
 {{- end }}
 
 {{- if not .IsHome }}
-  <link rel="stylesheet" href="/css/blogpost.css" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/blogpost.css">
 {{- end }}
