updated nav button spacing

--- a/themes/main/layouts/partials/head/css.html
+++ b/themes/main/layouts/partials/head/css.html
@@ -9,5 +9,13 @@
 {{- end }}
 
 {{- if not .IsHome }}
-  <link rel="stylesheet" href="/css/blogpost.css">
+  {{- with .Resources.Get "/css/blogpost.css" }}
+    {{- if eq hugo.Environment "development" }}
+      <link rel="stylesheet" href="{{ .RelPermalink }}">
+      {{- else }}
+        {{- with . | minify | fingerprint }}
+          <link rel="stylesheet" href="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" crossorigin="anonymous">
+      {{- end }}
+    {{- end }}
+  {{- end }}
 {{- end }}
