--- a/themes/main/assets/css/main.css
+++ b/themes/main/assets/css/main.css
@@ -66,7 +66,8 @@ h1 {
 .nav-box {
   /*background-color: rgb(0, 0, 24);*/
   /*border: 1px solid #343439;*/
-  margin: 3rem 3.5rem;
+  width: 17rem;
+  margin: 3rem 0rem;
 }
 
 .nav-element {
