--- a/themes/main/layouts/partials/head/css.html
+++ b/themes/main/layouts/partials/head/css.html
@@ -17,5 +17,7 @@
           <link rel="stylesheet" href="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" crossorigin="anonymous">
       {{- end }}
     {{- end }}
+  {{- else }}
+    {{ errorf "Unable to get page resource /css/blogpost.css" }}
   {{- end }}
 {{- end }}
