--- a/themes/main/layouts/partials/header.html
+++ b/themes/main/layouts/partials/header.html
@@ -1,25 +1,25 @@
 
-<table class="header">
-  <tr>
-    <td>
-      <a href="/"><img class="icon" src="/images/Logos/BitcoinChatt_horizontal-dark-backgrounds.png" alt="Bitcoin chatt" class="logo"></a>
-    </td>
-    <td>
-      <h3 class="header-element"><a href="/about">About</a></h3>
-    </td>
-    <td>
-      <h3 class="header-element"><a href="/blog">Blog</a></h3>
-    </td>
-    <td>
-      <h3 class="header-element"><a href="/join">Join</a></h3>
-    </td>
-    <td>
-      <h3 class="header-element"><a href="/contact">Contact</a></h3>
-    </td>
-    <td>
-      <h3 class="header-element"><a href="/donate">Donate</a></h3>
-    </td>
-  </tr>
-</table>
+<div class="header">
+
+  <div>
+    <a href="/"><img class="icon" src="/images/Logos/BitcoinChatt_horizontal-dark-backgrounds.png" alt="Bitcoin chatt" class="logo"></a>
+  </div>
+  <div>
+    <h3 class="header-element"><a href="/about">About</a></h3>
+  </div>
+  <div>
+    <h3 class="header-element"><a href="/blog">Blog</a></h3>
+  </div>
+  <div>
+    <h3 class="header-element"><a href="/join">Join</a></h3>
+  </div>
+  <div>
+    <h3 class="header-element"><a href="/contact">Contact</a></h3>
+  </div>
+  <div>
+    <h3 class="header-element"><a href="/donate">Donate</a></h3>
+  </div>
+
+</div>
 
 <!--{{ partial "menu.html" (dict "menuID" "main" "page" .) }}-->
