--- a/themes/main/layouts/partials/header.html
+++ b/themes/main/layouts/partials/header.html
@@ -4,22 +4,14 @@
   <div>
     <a href="/"><img class="icon" src="/images/Logos/BitcoinChatt_horizontal-dark-backgrounds.png" alt="Bitcoin chatt" class="logo"></a>
   </div>
-  <div>
+  <div id="header-list">
     <h3 class="header-element"><a href="/about">About</a></h3>
-  </div>
-  <div>
     <h3 class="header-element"><a href="/blog">Blog</a></h3>
-  </div>
-  <div>
     <h3 class="header-element"><a href="/join">Join</a></h3>
-  </div>
-  <div>
     <h3 class="header-element"><a href="/contact">Contact</a></h3>
-  </div>
-  <div>
     <h3 class="header-element"><a href="/donate">Donate</a></h3>
   </div>
-
+  <img id="hamburger" src="/images/hamburger.png" onclick="toggleHeaderMenu()">
 </div>
 
 <!--{{ partial "menu.html" (dict "menuID" "main" "page" .) }}-->
