--- a/themes/main/assets/css/main.css
+++ b/themes/main/assets/css/main.css
@@ -103,7 +103,7 @@ a:visited {
   color: #ffce07;
 }
 
-@media only screen and (max-device-width: 480px)
+@media only screen and (max-device-width: 1440px)
 {
   .icon {
     height: 3rem;
@@ -120,7 +120,7 @@ a:visited {
   }
 
   #header-list {
-    display: block;
+    display: none;
     background-color: black;
     justify-content: right;
     justify-self: right;
