--- a/themes/main/layouts/_default/baseof.html
+++ b/themes/main/layouts/_default/baseof.html
@@ -10,6 +10,10 @@
   <main>
     {{ block "main" . }}{{ end }}
 
+    {{ range $.Resources.ByType "text" }}
+      <p>"{{ .Content }}"</p>
+    {{ end }}
+
     {{- if .Params.underConstruction }}
       {{ partial "coming-soon.html" . }}
     {{- end }}
