--- a/themes/main/assets/css/main.css
+++ b/themes/main/assets/css/main.css
@@ -8,7 +8,7 @@ body {
   background-image: url("/images/logos/Bitcoin Chatt Avatar 2.0.png");*/
   background-color: #141419;
   color: #ffffff;
-  font-family: sans-serif;
+  font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
   min-height: 100dvh;
 }
@@ -25,17 +25,15 @@ header {
 
 h1 {
   display: block;
-  text-align: justify;
 }
 
-/*h3 {
-  text-justify: auto;
-  text-align: justify;
-}*/
+h1, h3 {
+  margin-bottom: 0rem;
+}
 
 p {
-  text-justify: auto;
   text-align: justify;
+  margin: 0rem;
 }
 
 img {
@@ -61,6 +59,7 @@ time {
 .header-element {
   display: inline-block;
   margin-left: 3rem;
+  padding: 0rem;
   height: 3rem;
 }
 
@@ -78,6 +77,10 @@ time {
 
 .banner-element {
   height: 20rem;
+}
+
+.article {
+  padding: 0rem 20rem;
 }
 
 .nav {
@@ -159,6 +162,10 @@ a:visited {
     display: flex;
     height: 3rem;
     justify-self: right;
+  }
+
+  .article {
+    padding: 0rem 0rem;
   }
 
   .nav {
