--- a/themes/main/layouts/_default/list.html
+++ b/themes/main/layouts/_default/list.html
@@ -12,12 +12,14 @@
     {{ end }}
   </nav>
 
-  {{ range .Pages }}
-    <h1 id="{{ .LinkTitle }}">{{ .LinkTitle }}</h1>
-    {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
-    {{ $dateHuman := .Date | time.Format ":date_long" }}
-    <time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
-
-    {{ .Content }}
-  {{ end }}
+  <div class="article">
+    {{ range .Pages }}
+      <h1 id="{{ .LinkTitle }}">{{ .LinkTitle }}</h1>
+      {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
+      {{ $dateHuman := .Date | time.Format ":date_long" }}
+      <time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
+    
+      {{ .Content }}
+    {{ end }}
+  </div>
 {{ end }}
