--- a/themes/main/layouts/partials/head.html
+++ b/themes/main/layouts/partials/head.html
@@ -2,5 +2,6 @@
 <meta name="viewport" content="width=device-width">
 <title>{{ if .IsHome }}{{ site.Title }}{{ else }}{{ printf "%s | %s" .Title site.Title }}{{ end }}</title>
 <link rel="icon" href="/images/Logos/Bitcoin Chatt Avatar.png">
+<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Montserrat'>
 {{ partial "head/css.html" . }}
 {{ partialCached "head/js.html" . }}
