--- a/themes/main/layouts/partials/coming-soon.html
+++ b/themes/main/layouts/partials/coming-soon.html
@@ -1,1 +1,1 @@
-<h1 style="font-size: 4rem; position: relative; top: 17rem;">Coming Soon!</h1>
+<h1 style="font-size: 4rem; position: fixed; transform: translate(-50%, -50%); left: 50dvw; top: 45dvh;">Coming Soon!</h1>
