adjust formatting for about page

--- a/themes/main/assets/css/main.css
+++ b/themes/main/assets/css/main.css
@@ -164,6 +164,10 @@ a:visited {
     justify-self: right;
   }
 
+  .desktop-only {
+    display: none;
+  }
+
   .article {
     padding: 0rem 0rem;
   }
