change image formatting on mobile

--- a/themes/main/assets/css/main.css
+++ b/themes/main/assets/css/main.css
@@ -174,7 +174,12 @@ a:visited {
   }
 
   .article {
+    display: block;
     padding: 0rem 0rem;
+  }
+
+  .article img {
+    width: 85dvw !important;
   }
 
   .nav {
