--- a/themes/main/assets/css/main.css
+++ b/themes/main/assets/css/main.css
@@ -118,6 +118,12 @@ iframe, form, input, textarea, button {
   margin: 0rem 1rem
 }
 
+#calendar-widget {
+  min-width: 70%;
+  max-width: 100%;
+  height: 800px;
+}
+
 a {
   text-decoration: none;
 }
@@ -180,6 +186,12 @@ a:visited {
 
   .article img {
     width: 85dvw !important;
+  }
+
+  #calendar-widget {
+    /*position: absolute;
+    top: 0rem;*/
+    height: 70dvh;
   }
 
   .nav {
