--- a/themes/main/layouts/partials/head.html
+++ b/themes/main/layouts/partials/head.html
@@ -3,5 +3,9 @@
 <title>{{ if .IsHome }}{{ site.Title }}{{ else }}{{ printf "%s | %s" .Title site.Title }}{{ end }}</title>
 <link rel="icon" href="/images/Logos/Bitcoin Chatt Avatar.png">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Montserrat'>
+
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+
 {{ partial "head/css.html" . }}
 {{ partialCached "head/js.html" . }}
