--- a/themes/main/assets/css/main.css
+++ b/themes/main/assets/css/main.css
@@ -93,11 +93,17 @@ iframe, form, input, textarea, button, #map {
   padding: 0rem 20rem;
 }
 
+form {
+  text-align: center;
+}
+
 .form-button, .form-control {
   width: 40dvw;
   min-height: 4dvh;
   border-radius: 8px;
   margin: 1rem auto;
+  font-size: 0.9rem;
+  font-family: inherit;
 }
 
 .nav {
@@ -210,6 +216,13 @@ a:visited {
     /*position: absolute;
     top: 0rem;*/
     height: 70dvh;
+  }
+
+  .form-button, .form-control {
+    width: 90dvw;
+    min-height: 4dvh;
+    border-radius: 8px;
+    margin: 1rem auto;
   }
 
   .nav {
