--- a/themes/main/layouts/partials/footer.html
+++ b/themes/main/layouts/partials/footer.html
@@ -1,1 +1,7 @@
 <!--<p>Copyright {{ now.Year }}. All rights reserved.</p>-->
+
+{{- if and (and (strings.Contains .Path "new-to-bitcoin") (not .Params.underConstruction)) (not (strings.Contains .Path "table-of-contents")) }}
+  <div style="text-align: center;">
+    <h3 class="header-element"><a href="/new-to-bitcoin/table-of-contents">Table of Contents</a></h3>
+  </div>
+{{- end }}
