--- a/themes/main/layouts/partials/header.html
+++ b/themes/main/layouts/partials/header.html
@@ -12,11 +12,12 @@
     <h3 class="header-element"><a href="/donate">Donate</a></h3>
   </div>
   <img id="hamburger" src="/images/hamburger.png" onclick="toggleHeaderMenu()">
-
-  <h1>{{ .Path }}</h1>
-  {{- if .Params.underConstruction }}
-    {{ partial "coming-soon.html" . }}
-  {{- end }}
 </div>
+
+{{- if and (strings.Contains .Path "new-to-bitcoin") (not (strings.Contains .Path "table-of-contents")) }}
+  <div style="text-align: center;">
+    <h3 class="header-element"><a href="/new-to-bitcoin/table-of-contents">Table of Contents</a></h3>
+  </div>
+{{- end }}
 
 <!--{{ partial "menu.html" (dict "menuID" "main" "page" .) }}-->
