--- a/themes/main/layouts/partials/header.html
+++ b/themes/main/layouts/partials/header.html
@@ -16,7 +16,7 @@
 
 {{- if and (strings.Contains .Path "new-to-bitcoin") (not (strings.Contains .Path "table-of-contents")) }}
   <div style="text-align: center;">
-    <h3 class="header-element"><a href="/new-to-bitcoin/table-of-contents">Table of Contents</a></h3>
+    <h3><a href="/new-to-bitcoin/table-of-contents">Table of Contents</a></h3>
   </div>
 {{- end }}
 
