remove beta site text

--- a/themes/main/layouts/_default/baseof.html
+++ b/themes/main/layouts/_default/baseof.html
@@ -8,10 +8,10 @@
     {{ partial "header.html" . }}
   </header>
   <main>
-    {{ block "main" . }}{{ end }}
-
     {{- if .Params.underConstruction }}
       {{ partial "coming-soon.html" . }}
+    {{- else }}
+      {{ block "main" . }}{{ end }}
     {{- end }}
   </main>
   <footer>
