center bottom table of contents link

--- a/themes/main/layouts/partials/footer.html
+++ b/themes/main/layouts/partials/footer.html
@@ -2,6 +2,6 @@
 
 {{- if and (and (strings.Contains .Path "new-to-bitcoin") (not .Params.underConstruction)) (and (not (strings.Contains .Path "table-of-contents")) (ne .Path "/new-to-bitcoin")) }}
   <div style="text-align: center;">
-    <h3 class="header-element"><a href="/new-to-bitcoin/table-of-contents">Table of Contents</a></h3>
+    <h3><a href="/new-to-bitcoin/table-of-contents">Table of Contents</a></h3>
   </div>
 {{- end }}
