--- a/themes/main/layouts/partials/footer.html
+++ b/themes/main/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <!--<p>Copyright {{ now.Year }}. All rights reserved.</p>-->
 
-{{- if and (and (strings.Contains .Path "new-to-bitcoin") (not .Params.underConstruction)) (and (not (strings.Contains .Path "table-of-contents")) (ne .Path "/new-to-bitcoin")) }}
+{{- if and (and (strings.Contains .Path "new-to-bitcoin") (not .Params.underConstruction)) (not (strings.Contains .Path "table-of-contents")) }}
   <div style="text-align: center;">
     <h3><a href="/new-to-bitcoin/table-of-contents">Table of Contents</a></h3>
   </div>
