--- a/themes/main/layouts/partials/header.html
+++ b/themes/main/layouts/partials/header.html
@@ -14,6 +14,8 @@
   <img id="hamburger" src="/images/hamburger.png" onclick="toggleHeaderMenu()">
 </div>
 
+<div style="padding: 2rem;"></div>
+
 {{- if and (strings.Contains .Path "new-to-bitcoin") (not (strings.Contains .Path "table-of-contents")) }}
   <div style="text-align: center;">
     <h3><a href="/new-to-bitcoin/table-of-contents">Table of Contents</a></h3>
