fix the mobile-icon class to work with higher precidence

--- a/themes/main/assets/css/main.css
+++ b/themes/main/assets/css/main.css
@@ -247,7 +247,7 @@ a:visited {
     padding: 0rem 0rem;
   }
 
-  .article :not(.mobile-icon) img {
+  .article img :not(.mobile-icon) {
     width: 85dvw !important;
   }
 
