--- a/themes/main/layouts/partials/head.html
+++ b/themes/main/layouts/partials/head.html
@@ -9,3 +9,13 @@
 
 {{ partial "head/css.html" . }}
 {{ partialCached "head/js.html" . }}
+
+<!-- MailerLite Universal -->
+<script>
+    (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[])
+    .push(arguments);},l=d.createElement(e),l.async=1,l.src=u,
+    n=d.getElementsByTagName(e)[0],n.parentNode.insertBefore(l,n);})
+    (window,document,'script','https://assets.mailerlite.com/js/universal.js','ml');
+    ml('account', '1502763');
+</script>
+<!-- End MailerLite Universal -->
