--- a/themes/main/assets/css/main.css
+++ b/themes/main/assets/css/main.css
@@ -112,6 +112,63 @@ iframe, form, input, textarea, button, #map {
   padding: 0rem 36rem;
 }
 
+.video-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  justify-content: center;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.video-item {
+  width: 350px;
+  box-sizing: border-box;
+}
+
+.video-item p {
+  margin: 10px 0 0 0;
+  text-align: center;
+}
+
+.video-item img {
+  display: block;
+}
+
+.blog-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  justify-content: center;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.blog-item {
+  width: 200px;
+  box-sizing: border-box;
+
+  padding: 1rem;
+
+  border-width: 4px;
+  border-color: #FF9900;
+  border-style: solid;
+  border-radius: 20px;
+}
+
+.blog-item h1 h2 h3 h4 h5 h6 p {
+  margin: 10px 0 0 0;
+  text-align: center;
+}
+
+.blog-item img {
+  display: flex;
+  max-width: 100%;
+  margin: 0;
+}
+
 .tight-margin {
   text-align: left;
   padding: 0rem 39rem;
