--- a/themes/main/assets/css/main.css
+++ b/themes/main/assets/css/main.css
@@ -147,7 +147,7 @@ iframe, form, input, textarea, button, #map {
 }
 
 .blog-item {
-  width: 200px;
+  width: 30%;
   box-sizing: border-box;
 
   padding: 1rem;
