--- a/themes/main/layouts/partials/footer.html
+++ b/themes/main/layouts/partials/footer.html
@@ -8,6 +8,6 @@
 
 {{- if and (strings.Contains .Path "newsletter") (not .Params.underConstruction) }}
   <div style="text-align: center;">
-    <h3><a href="/new-to-bitcoin/table-of-contents">Table of Contents</a></h3>
+    <h3><a href="/blog">Table of Contents</a></h3>
   </div>
 {{- end }}
