--- a/themes/main/assets/css/main.css
+++ b/themes/main/assets/css/main.css
@@ -163,6 +163,8 @@ iframe, form, input, textarea, button, #map {
   border-color: #FF9900;
   border-style: solid;
   border-radius: 20px;
+
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .blog-item h1,
@@ -173,24 +175,45 @@ iframe, form, input, textarea, button, #map {
 .blog-item h6,
 .blog-item p {
   margin: 10px 0 0 0;
+  font-size: 1.25rem;
   /*text-align: center;*/
-  float: none;
   /*position: absolute;
   left: 0px;*/
 }
 
+.blog-item h3 {
+  font-size: 1.4rem;
+}
+
+.blog-item div {
+  grid-column-start: 2;
+  grid-row-start: 1;
+  grid-row-end: 4;
+}
+
+.blog-item a {
+  /*margin-top: 3rem;*/
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr auto 1fr;
+}
+
 .blog-item ul {
-  margin-top: 3rem;
+  /*margin-top: 3rem;*/
+  /*display: flex;*/
+  text-align: left;
+  margin-bottom: 0;
 }
 
 .blog-item img {
   /*display: flex;*/
   /*max-height: 100%;*/
   float: left;
-  max-width: 9rem;
+  width: 100%;
 
-  margin-left: 0rem;
-  margin-right: -9rem;
+  grid-row-start: 2;
+
+  margin: 0 0 0 0;
 }
 
 .tight-margin {
