remove table of contents links for new to bitcoin subpages

--- a/themes/main/layouts/partials/footer.html
+++ b/themes/main/layouts/partials/footer.html
@@ -1,10 +1,10 @@
 <!--<p>Copyright {{ now.Year }}. All rights reserved.</p>-->
 
-{{- if and (and (strings.Contains .Path "new-to-bitcoin") (not .Params.underConstruction)) (not (strings.Contains .Path "table-of-contents")) }}
+<!--{{- if and (and (strings.Contains .Path "new-to-bitcoin") (not .Params.underConstruction)) (not (strings.Contains .Path "table-of-contents")) }}
   <div style="text-align: center;">
     <h3><a href="/new-to-bitcoin/table-of-contents">Table of Contents</a></h3>
   </div>
-{{- end }}
+{{- end }}-->
 
 {{- if and (strings.Contains .Path "newsletter") (not .Params.underConstruction) }}
   <div style="text-align: center;">
