--- a/themes/main/layouts/partials/header.html
+++ b/themes/main/layouts/partials/header.html
@@ -6,6 +6,7 @@
   </div>
   <div id="header-list">
     <h3 class="header-element"><a href="/about">About</a></h3>
+    <h3 class="header-element"><a href="/join">Join</a></h3>
     <h3 class="header-element"><a href="/blog">Blog</a></h3>
     <h3 class="header-element"><a href="/contact">Contact</a></h3>
   </div>
